cambios gigantes en cuanto al sistema de cobro, queda pendiente el registro correcto de cobros de NO mensualidades